# SolStream

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: coverage.yml
DOCS/: PRD.md
benches/: Cargo.toml  README.md  decoder_bench.rs  storage_bench.rs  throughput_bench.rs
docs/: ARCHITECTURE.md  WORKFLOW.excalidraw  architecture_diagram.mermaid
examples/: Cargo.toml  README.md  account_indexer.rs  backfill_indexer.rs  build.rs  generator_spl_transfer.rs  helius_system_transfer.rs  jupiter_swap_indexer.rs  multi_program_indexer.rs  multi_program_indexer_2.rs  otel_indexer.rs  raydium_indexer.rs  rpc_spl_token.rs  rpc_system_transfer.rs  spl_token_indexer.rs  verify_shutdown.rs  ws_system_transfer.rs
examples/src/: main.rs
solana-idl-parser/src/: generator.rs
solana-indexer-idl/: Cargo.toml
solana-indexer-idl/src/: lib.rs
solana-indexer-idl/tests/: generator_test.rs
solana-indexer-sdk/: Cargo.toml  README.md  build.rs
solana-indexer-sdk/.cargo/: config.toml
solana-indexer-sdk/src/: lib.rs
solana-indexer-sdk/src/config/: mod.rs
solana-indexer-sdk/tests/: account_tests.rs  decoder_test.rs  fetcher_test.rs  handler_integration_test.rs  helius_tests.rs  hybrid_source_test.rs  indexer_test.rs  multi_program_test.rs  poller_test.rs  registry_test.rs  rpc_integration_test.rs  websocket_integration_test.rs
src/: config.rs  decoder.rs  error.rs  fetcher.rs  indexer.rs  lib.rs  macros.rs  main.rs  storage.rs  traits.rs  types.rs
src/common/: config.rs  logging.rs  macros.rs  mod.rs  traits.rs  types.rs
src/config/: mod.rs
src/core/: backfill.rs  decoder.rs  indexer.rs  log_registry.rs  mod.rs
src/sources/: mod.rs  poller.rs  websocket.rs
src/storage/: mod.rs
src/streams/: helius.rs  hybrid.rs  mod.rs  poller.rs  websocket.rs
src/types/: events.rs  mod.rs  traits.rs
src/utils/: logging.rs
tests/: account_tests.rs  error_recovery_test.rs  handler_integration_test.rs  hybrid_source_test.rs  indexer_test.rs  multi_program_test.rs  rpc_integration_test.rs
(+32 files in other folders)
