[package]
name = "solana-indexer-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-indexer-sdk = { path = "../solana-indexer-sdk" }
criterion = "0.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
solana-transaction-status = "1.18.26"
sqlx = { version = "0.7.4", default-features = false, features = [ "runtime-tokio-rustls", "postgres" ] }
solana-sdk = "1.18.26"
solana-client = "1.18.26"

[[bench]]
name = "decoder_bench"
path = "decoder_bench.rs"
harness = false

[[bench]]
name = "storage_bench"
path = "storage_bench.rs"
harness = false

[[bench]]
name = "throughput_bench"
path = "throughput_bench.rs"
harness = false
